@@ -377,6 +377,7 @@ def update_video_infos(provider, context, video_id_dict, playlist_item_id_dict=N
 
         if not video_item.live:
             yt_context_menu.append_play_with_subtitles(context_menu, provider, context, video_id)
+            yt_context_menu.append_play_audio_only(context_menu, provider, context, video_id)
 
         if len(context_menu) > 0:
             video_item.set_context_menu(context_menu, replace=replace_context_menu)
